--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "nodejs-demo-app",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-  "start": "node index.js",
-  "test": "echo \"Running tests...\" && exit 0"
-},
+
+   "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+   
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "jest": "^29.7.0"
+  }
 }
